# cloud_annotation_tool

./: CMakeLists.txt
